api working for  sending otp to the user mobile and varifying the otp and some changes regarding home login page using mobile number

--- a/package.json
+++ b/package.json
@@ -171,6 +171,7 @@
 		"fibers": "^3.1.1",
 		"file-type": "^10.6.0",
 		"filesize": "^3.6.1",
+		"google-libphonenumber": "^3.2.6",
 		"googleapis": "^25.0.0",
 		"grant-express": "^3.8.0",
 		"grapheme-splitter": "^1.0.4",
@@ -183,6 +184,7 @@
 		"iconv-lite": "^0.4.24",
 		"image-size": "^0.6.3",
 		"imap": "^0.8.19",
+		"intl-tel-input": "^16.0.8",
 		"ip-range-check": "^0.0.2",
 		"jquery": "^3.3.1",
 		"jschardet": "^1.6.0",
